doc: Update source files (en .po), for translations

--- a/documentation/content/en/books/developers-handbook/policies/_index.po
+++ b/documentation/content/en/books/developers-handbook/policies/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -287,7 +287,7 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/policies/_index.adoc:137
 msgid ""
 "The link:https://www.FreeBSD.org/administration/#t-core[Core team] decides "
-"if the code should be part of `make world`."
+"if the code should be part of the installed base system."
 msgstr ""
 
 #. type: Plain text
