--- a/documentation/content/en/books/developers-handbook/tools/_index.po
+++ b/documentation/content/en/books/developers-handbook/tools/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1220,7 +1220,8 @@ msgid ""
 "date with respect to your latest changes to [.filename]#foo.c#.  This "
 "principle can be extended to [.filename]#Makefile#'s with hundreds of "
 "targets-in fact, on FreeBSD, it is possible to compile the entire operating "
-"system just by typing `make world` in the appropriate directory!"
+"system just by typing `make buildworld buildkernel` at the top level "
+"directory in the src tree."
 msgstr ""
 
 #. type: Plain text
