--- a/documentation/content/en/books/handbook/firewalls/_index.po
+++ b/documentation/content/en/books/handbook/firewalls/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3445,7 +3445,7 @@ msgid ""
 "used together with man:natd[8].  The exceptions are the configuration of the "
 "in-kernel NAT instance `(ipfw -q nat 1 config ...)` which is not needed "
 "together with reassemble rule 99 because its functionality is included in "
-"the `divert` action.  Rule number 100 and 1000 will have to change sligthly "
+"the `divert` action.  Rule number 100 and 1000 will have to change slightly "
 "as shown below."
 msgstr ""
 
