--- a/documentation/content/en/books/handbook/wayland/_index.po
+++ b/documentation/content/en/books/handbook/wayland/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -732,7 +732,7 @@ msgid ""
 "the terminal emulator was set to be `alacritty`, and a screen lock command "
 "was defined; more on this later.  The output keyword, the mode, the "
 "position, a background wallpaper, and Sway is also told to stretch this "
-"wallpaper to fill out the screen.  Finally, `swaylock` is set to daemonize "
+"wallpaper to fill out the screen.  Finally, `swayidle` is set to daemonize "
 "and lock the screen after a timeout of 300 seconds, placing the screen or "
 "monitor into sleep mode after 600 seconds.  The locked background color of "
 "000000, which is black, is also defined here.  Using swaylock-effects, a "
