--- a/documentation/content/en/books/handbook/x11/_index.po
+++ b/documentation/content/en/books/handbook/x11/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -501,7 +501,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/x11/_index.adoc:252
 #, no-wrap
-msgid "x11/nvidia-driver-304"
+msgid "package:x11/nvidia-driver-304[]"
 msgstr ""
 
 #. type: Table
@@ -513,7 +513,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/x11/_index.adoc:255
 #, no-wrap
-msgid "x11/nvidia-driver-340"
+msgid "package:x11/nvidia-driver-340[]"
 msgstr ""
 
 #. type: Table
@@ -525,7 +525,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/x11/_index.adoc:258
 #, no-wrap
-msgid "x11/nvidia-driver-390"
+msgid "package:x11/nvidia-driver-390[]"
 msgstr ""
 
 #. type: Table
@@ -537,7 +537,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/x11/_index.adoc:261
 #, no-wrap
-msgid "x11/nvidia-driver-470"
+msgid "package:x11/nvidia-driver-470[]"
 msgstr ""
 
 #. type: Table
@@ -549,7 +549,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/x11/_index.adoc:264
 #, no-wrap
-msgid "x11/nvidia-driver"
+msgid "package:x11/nvidia-driver[]"
 msgstr ""
 
 #. type: Table
@@ -561,8 +561,8 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/x11/_index.adoc:271
 msgid ""
-"Version 304 of the NVIDIA(R) graphics driver (nvidia-driver-304) does not "
-"support xorg-server 1.20 or later."
+"Version 304 of the NVIDIA(R) graphics driver (package:x11/nvidia-"
+"driver-304[]) does not support xorg-server 1.20 or later."
 msgstr ""
 
 #. type: Plain text
@@ -587,8 +587,8 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/books/handbook/x11/_index.adoc:290
 msgid ""
-"The `nvidia` driver must be used if the packages x11/nvidia-driver-304 or "
-"x11/nvidia-driver-340 have been installed."
+"The `nvidia` driver must be used if the packages package:x11/nvidia-"
+"driver-304[] or package:x11/nvidia-driver-340[] have been installed."
 msgstr ""
 
 #. type: delimited block . 4
