--- a/documentation/content/en/books/handbook/zfs/_index.po
+++ b/documentation/content/en/books/handbook/zfs/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2084,7 +2084,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/zfs/_index.adoc:1353
 #, no-wrap
-msgid "# gpart bootcode -p /boot/boot1.efifat -i 1 ada1\n"
+msgid "# gpart bootcode -p /boot/boot1.efi -i 1 ada1\n"
 msgstr ""
 
 #. type: Plain text
