--- a/documentation/content/en/books/handbook/cutting-edge/_index.po
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2296,7 +2296,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/cutting-edge/_index.adoc:1160
 msgid ""
-"On macOS, the only dependency LLVM.  The necessary dependencies can be "
+"On macOS, the only dependency is LLVM.  The necessary dependencies can be "
 "installed with package manager (e.g., link:https://brew.sh/[Homebrew]):"
 msgstr ""
 
