--- a/documentation/content/en/books/handbook/introduction.po
+++ b/documentation/content/en/books/handbook/introduction.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2025-06-29 21:20+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,7 +25,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/introduction.adoc:8
 msgid ""
 "Welcome to FreeBSD! This handbook covers the installation and day to day use "
-"of _FreeBSD {rel142-current}-RELEASE_ and _{rel135-current}-RELEASE_.  This "
+"of _FreeBSD {rel143-current}-RELEASE_ and _{rel135-current}-RELEASE_.  This "
 "book is the result of ongoing work by many individuals.  Some sections might "
 "be outdated.  Those interested in helping to update and expand this document "
 "should send email to the {freebsd-doc}."
