--- a/website/content/en/status/report-2025-04-2025-06/geomman.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/geomman.adoc
@@ -22,5 +22,5 @@ The next steps for geomman are:
 * Handle duplicate UUIDs between partitions when using dd.
 * Add options to create, grow, and shrink more filesystem types.
 
-Sponsor: Google
+Sponsor: Google Summer of Code
 
