nl/handbook: Update translation of the introduction of part III.

--- a/documentation/content/nl/books/handbook/partiii.adoc
+++ b/documentation/content/nl/books/handbook/partiii.adoc
@@ -1,16 +1,16 @@
 ---
-title: Deel III. Systeembeheer
-prev: books/handbook/linuxemu
 next: books/handbook/config
-showBookMenu: true
-weight: 15
 params:
-  path: "/books/handbook/partiii/"
+  path: /books/handbook/partiii/
+prev: books/handbook/linuxemu
+showBookMenu: 'true'
+title: 'Deel III. Systeembeheer'
+weight: 17
 ---
 
 [[system-administration]]
 = Systeembeheer
 
-De verdere hoofdstukken van het FreeBSD handboek beslaan alle aspecten van het FreeBSD systeembeheer. Ieder hoofdstuk begint met een omschrijving van wat de leerstof in een hoofdstuk is en wat de verwachte voorkennis is.
+De resterende hoofdstukken van het handboek beslaan alle aspecten van het FreeBSD systeembeheer. Elk hoofdstuk begint met de leerdoelen van het hoofdstuk en geeft ook een beschrijving van de verwachte voorkennis.
 
-De hoofdstukken zijn ook ontworpen om gelezen te worden als de specifieke informatie nodig is. Ze hoeven niet in een bepaalde volgorde gelezen te worden en ze hoeven ook niet gelezen te zijn voordat een gebruiker met FreeBSD aan de slag kan.
+Deze hoofdstukken kunnen worden gelezen als naslagwerk. Ze kunnen in willekeurige volgorde worden gelezen en zijn niet vereist om te kunnen beginnen met FreeBSD.
