--- a/website/content/en/status/report-2025-04-2025-06/vision-accessibility.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/vision-accessibility.adoc
@@ -7,15 +7,9 @@ Contact: FreeBSD Accessibility mailing list <freebsd-accessibility@FreeBSD.org> 
 Contact: Alfonso Sabato Siciliano <asiciliano@FreeBSD.org>
 
 This quarter, the review for the FreeBSD Accessibility Handbook was submitted and is available at: https://reviews.freebsd.org/D50894.
+The review includes a link for an HTML preview.
 
 The handbook aims to document assistive technologies for vision accessibility available in FreeBSD, covering both the BASE system and the Ports Collection.
-
-The review description includes an HTML preview and the following abstract: +
-"_This book covers the assistive technologies available in FreeBSD.
-Accessibility is an ongoing effort, not a fixed destination.
-As such, this handbook is a living document and continually evolving.
-Contributions, suggestions, and feedback are highly encouraged._"
-
 It is divided into two parts and contains six chapters:
 
 . Help - Covers how to request assistance effectively through appropriate FreeBSD communication channels.
