--- a/website/content/en/status/report-2025-04-2025-06/vision-accessibility.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/vision-accessibility.adoc
@@ -7,7 +7,7 @@ Contact: FreeBSD Accessibility mailing list <freebsd-accessibility@FreeBSD.org> 
 Contact: Alfonso Sabato Siciliano <asiciliano@FreeBSD.org>
 
 This quarter, the review for the FreeBSD Accessibility Handbook was submitted and is available at: https://reviews.freebsd.org/D50894.
-The review includes a link for an HTML preview.
+The review includes a link to an HTML preview.
 
 The handbook aims to document assistive technologies for vision accessibility available in FreeBSD, covering both the BASE system and the Ports Collection.
 It is divided into two parts and contains six chapters:
