new comitter (src): ShengYi Hung (aokblast)
This patch follows the "New Committer" guide in the documnetation:

1. Add myself to Author Entry
2. Update Developers and Contributors list
3. Add a News item
4. Upload my PGP key

Approved by:  markj(mentor), lwhsu(mentor)
Differential Revision: https://reviews.freebsd.org/D51115

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -207,6 +207,10 @@
 :antoine-email: antoine@FreeBSD.org
 :antoine: {antoine-name} <{antoine-email}>
 
+:aokblast-name: ShengYi Hung
+:aokblast-email: aokblast@FreeBSD.org
+:aokblast: {aokblast-name} <{aokblast-email}>
+
 :araujo-name: Marcelo Araujo
 :araujo-email: araujo@FreeBSD.org
 :araujo: {araujo-name} <{araujo-email}>
