website: Remove EoL'd 14.1-RELEASE

--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -29,7 +29,6 @@ For information about branches, release dates, and estimated end-of-life (EOL) d
 
 === Legacy
 
-* *Release {rel134-current}* ({rel134-current-date}) _link:{u-rel134-announce}[Announcement] : link:{u-rel134-notes}[Release Notes] : link:{u-rel134-installation}[Installation Instructions] : link:{u-rel134-hardware}[Hardware Compatibility List] : link:{u-rel134-readme}[Readme] : link:{u-rel134-errata}[Errata] : link:{u-rel134-signatures}[Signed Checksums]_
 * *Release {rel135-current}* ({rel135-current-date}) _link:{u-rel135-announce}[Announcement] : link:{u-rel135-notes}[Release Notes] : link:{u-rel135-installation}[Installation Instructions] : link:{u-rel135-hardware}[Hardware Compatibility List] : link:{u-rel135-readme}[Readme] : link:{u-rel135-errata}[Errata] : link:{u-rel135-signatures}[Signed Checksums]_
 * *Release {rel142-current}* ({rel142-current-date}) _link:{u-rel142-announce}[Announcement] : link:{u-rel142-notes}[Release Notes] : link:{u-rel142-installation}[Installation Instructions] : link:{u-rel142-hardware}[Hardware Compatibility List] : link:{u-rel142-readme}[Readme] : link:{u-rel142-errata}[Errata] : link:{u-rel142-signatures}[Signed Checksums]_
 
@@ -47,6 +46,7 @@ For historical information about branches, release dates, types, and EOL dates, 
 
 * *14.1* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
 * *14.0* ({rel140-current-date}) _link:{u-rel140-announce}[Announcement] : link:{u-rel140-notes}[Release Notes] : link:{u-rel140-installation}[Installation Instructions] : link:{u-rel140-hardware}[Hardware Compatibility List] : link:{u-rel140-readme}[Readme] : link:{u-rel140-errata}[Errata] : link:{u-rel140-signatures}[Signed Checksums]_
+* *13.4* ({rel134-current-date}) _link:{u-rel134-announce}[Announcement] : link:{u-rel134-notes}[Release Notes] : link:{u-rel134-installation}[Installation Instructions] : link:{u-rel134-hardware}[Hardware Compatibility List] : link:{u-rel134-readme}[Readme] : link:{u-rel134-errata}[Errata] : link:{u-rel134-signatures}[Signed Checksums]_
 * *13.3* ({rel133-current-date}) _link:{u-rel133-announce}[Announcement] : link:{u-rel133-notes}[Release Notes] : link:{u-rel133-installation}[Installation Instructions] : link:{u-rel133-hardware}[Hardware Compatibility List] : link:{u-rel133-readme}[Readme] : link:{u-rel133-errata}[Errata] : link:{u-rel133-signatures}[Signed Checksums]_
 * *13.2* ({rel132-current-date}) _link:{u-rel132-announce}[Announcement] : link:{u-rel132-notes}[Release Notes] : link:{u-rel132-installation}[Installation Instructions] : link:{u-rel132-hardware}[Hardware Compatibility List] : link:{u-rel132-readme}[Readme] : link:{u-rel132-errata}[Errata] : link:{u-rel132-signatures}[Signed Checksums]_
 * *13.1* ({rel131-current-date}) _link:{u-rel131-announce}[Announcement] : link:{u-rel131-notes}[Release Notes] : link:{u-rel131-installation}[Installation Instructions] : link:{u-rel131-hardware}[Hardware Compatibility List] : link:{u-rel131-readme}[Readme] : link:{u-rel131-errata}[Errata] : link:{u-rel131-signatures}[Signed Checksums]_
