--- a/website/content/en/security/unsupported.adoc
+++ b/website/content/en/security/unsupported.adoc
@@ -62,6 +62,7 @@ The following releases are no longer supported but are listed here for reference
 |releng/13.1 |13.1-RELEASE |n/a |May 16, 2022 |July 31, 2023
 |releng/13.2 |13.2-RELEASE |n/a |April 11, 2023 |June 30, 2024
 |releng/13.3 |13.3-RELEASE |n/a |March 5, 2024 | December 31, 2024
+|releng/13.4 |13.4-RELEASE |n/a |September 17, 2024 | June 30, 2025
 |releng/14.0 |14.0-RELEASE |n/a |November 20, 2023|September 30, 2024
 |releng/14.1 |14.1-RELEASE |n/a |June 4, 2024|March 31, 2025
 |===
