handbook/disks: GBDE was removed in FreeBSD 15.0
Reviewed by:	ziaee
Signed-off-by:	ykla <yklaxds@gmail.com>
Closes:		https://github.com/freebsd/freebsd-doc/pull/521

--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -1735,6 +1735,11 @@ No cleartext ever touches the hard drive's platter.
 This chapter demonstrates how to create an encrypted file system on FreeBSD.
 It first demonstrates the process using `gbde` and then demonstrates the same example using `geli`.
 
+[WARNING]
+====
+GBDE disk-encryption is deprecated, and removed in FreeBSD 15.0.
+====
+
 === Disk Encryption with gbde
 
 The objective of the man:gbde[4] facility is to provide a formidable challenge for an attacker to gain access to the contents of a _cold_ storage device.
