Update doceng team: ebrandi as full member, remove fernape
Thanks to fernape for all his work!

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3777,7 +3777,7 @@
 :core-secretary-email: core-secretary@FreeBSD.org
 
 // FreeBSD Doc Engineering Team
-:doceng-members: {blackend}, {fernape}, {hrs}, {ebrandi} (lurker)
+:doceng-members: {blackend}, {hrs}, {ebrandi}
 :doceng-secretary-email: <doceng-secretary@FreeBSD.org>
 
 // FreeBSD Donations Liaison
