--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -75,9 +75,8 @@ The FreeBSD Documentation Engineering Team is responsible for defining and follo
 The https://www.freebsd.org/internal/doceng/[doceng team charter] describes the duties and responsibilities of the Documentation Engineering Team in greater detail.
 
 * {blackend}
-* {fernape} (Secretary)
 * {hrs}
-* {ebrandi} (lurker)
+* {ebrandi}
 
 [[t-portmgr]]
 == FreeBSD Ports Management Team <portmgr@FreeBSD.org>
