Status/2025Q2/suspend.adoc: Remove contraction
Co-authored-by: Lorenzo Salvadore <developer@lorenzosalvadore.it>

--- a/website/content/en/status/report-2025-04-2025-06/suspend.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/suspend.adoc
@@ -14,7 +14,7 @@ Suspend-to-idle and support for S0ix sleep is in the process of being added to F
 This will allow modern Intel and AMD laptops (e.g. AMD and newer Intel Framework laptops), some of which do not support ACPI S3 sleep, to enter low power states to increase battery life.
 
 The USB4 driver (which was a dependency to S0i3 entry) has been updated to allow for the sleep routines, and all CPUs are now entering C3 during s2idle.
-Scheduler work is needed to ensure CPUs stay in C3 and don't get work scheduled to them, but a prototype solution exists and is working.
+Scheduler work is needed to ensure CPUs stay in C3 and do not get work scheduled to them, but a prototype solution exists and is working.
 This means that S0i3 can now be entered on the Framework 13 AMD Ryzen 7040 series laptops, albeit only on my working 14.1 branch.
 This does not work on -CURRENT yet.
 
