Status/2025Q2/suspend.adoc: `@freebsd.org` -> `@FreeBSD.org`
Co-authored-by: Lorenzo Salvadore <developer@lorenzosalvadore.it>

--- a/website/content/en/status/report-2025-04-2025-06/suspend.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/suspend.adoc
@@ -7,7 +7,7 @@ link:https://github.com/obiwac/freebsd-s0ix/tree/everything[Working Repo] URL: l
 link:https://reviews.freebsd.org/D48721[Tip of the s2idle/S0ix + AMD SMU stack] URL: https://reviews.freebsd.org/D48721[] +
 link:https://reviews.freebsd.org/D49453[USB4 suspend stack] URL: https://reviews.freebsd.org/D49453[]
 
-Contact: obiwac <obiwac@freebsd.org>
+Contact: obiwac <obiwac@FreeBSD.org>
 
 Suspend-to-idle and support for S0ix sleep is in the process of being added to FreeBSD.
 
