Status/2025Q2/suspend.adoc: Remove contraction
Co-authored-by: Lorenzo Salvadore <developer@lorenzosalvadore.it>

--- a/website/content/en/status/report-2025-04-2025-06/suspend.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/suspend.adoc
@@ -19,7 +19,7 @@ This means that S0i3 can now be entered on the Framework 13 AMD Ryzen 7040 serie
 This does not work on -CURRENT yet.
 
 The amdgpio driver (for the AMD GPIO controller) has been extended to service all GPIO interrupts and suspend the controller, as that was potentially a blocker for the CPU to enter S0i3.
-Nothing is being done with these GPIO interrupts at the moment as FreeBSD doesn't have the infrastructure for device drivers to register these interrupts on x86 yet.
+Nothing is being done with these GPIO interrupts at the moment as FreeBSD does not have the infrastructure for device drivers to register these interrupts on x86 yet.
 
 The SMU idlemask is also now being exported as a sysctl now (dev.amdsmu.0.idlemask), the value of which is not documented and is mostly to help AMD debug issues with S0i3 entry on FreeBSD on their side.
 
