Status/2025Q2/suspend.adoc: Explicit abbreviation
Co-authored-by: Lorenzo Salvadore <developer@lorenzosalvadore.it>

--- a/website/content/en/status/report-2025-04-2025-06/suspend.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/suspend.adoc
@@ -25,7 +25,7 @@ The SMU idlemask is also now being exported as a sysctl now (dev.amdsmu.0.idlema
 
 A pre-built image is being built to aid in easily testing S0i3 entry on machines.
 
-W.r.t. the links, the blog post entry is outdated.
+With respect to the links, the blog post entry is outdated.
 A talk was given about this at BSDCan 2025 too, but it has yet to be uploaded as a standalone video; it will be included in the next status report.
 
 Sponsor: The FreeBSD Foundation
