doc/nl: re-add a '}' which somehow got lost.

--- a/documentation/content/nl/articles/_index.po
+++ b/documentation/content/nl/articles/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2022-01-08 11:34-0300\n"
-"PO-Revision-Date: 2025-06-24 20:10+0000\n"
+"PO-Revision-Date: 2025-06-26 04:45+0000\n"
 "Last-Translator: René Ladan <rene0@freedom.nl>\n"
 "Language-Team: Dutch <https://translate-dev.freebsd.org/projects/"
 "documentation/articles_index/nl_NL/>\n"
@@ -27,4 +27,4 @@ msgstr "Artikelen"
 #. type: Plain text
 #: documentation/content/en/articles/_index.adoc:8
 msgid "{{< list-articles-directories >}}"
-msgstr "{{< list-articles-directories >}"
+msgstr "{{< list-articles-directories >}}"
